@@ -1,6 +1,6 @@
 DESTDIR=
 
-PACKAGE=runit-0.11.2
+PACKAGE=runit-0.11.4
 DIRS=doc man etc package src
 MANPAGES=runit.8 runit-init.8 runsvdir.8 runsv.8 svwaitdown.8 svwaitup.8 \
 utmpset.8 runsvchdir.8 runsvstat.8 runsvctrl.8 svlogd.8 chpst.8
