@@ -17,14 +17,14 @@ If you don't have a <tt>/package</tt> directory, create it now:
   # chmod 1755 /package
 </pre>
 Download
-<a href="runit-0.11.2.tar.gz">runit-0.11.2.tar.gz</a> into <tt>/package</tt>
+<a href="runit-0.11.4.tar.gz">runit-0.11.4.tar.gz</a> into <tt>/package</tt>
 and unpack the archive
 <pre>
   # cd /package
-  # gunzip runit-0.11.2.tar
-  # tar -xpf runit-0.11.2.tar
-  # rm runit-0.11.2.tar
-  # cd admin/runit-0.11.2
+  # gunzip runit-0.11.4.tar
+  # tar -xpf runit-0.11.4.tar
+  # rm runit-0.11.4.tar
+  # cd admin/runit-0.11.4
 </pre>
 On MacOSX, do
 <pre>
@@ -43,7 +43,7 @@ hierarchy, do:
 </pre>
 To report success:
 <pre>
-  # mail pape-runit-0.11.2@smarden.org &lt;compile/sysdeps
+  # mail pape-runit-0.11.4@smarden.org &lt;compile/sysdeps
 </pre>
 Refer to <a href="replaceinit.html">replacing init</a> for
 replacing <i>init</i> with <i>runit</i>, or to
